Fixed issue on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -616,7 +616,7 @@ aside {
 }
 
 .articles img {
-  height: 100%;
+  width: 100%;
   border-radius: 5px;
 }
 
